shanti filters spacing fix

--- a/css/shanti-main.css
+++ b/css/shanti-main.css
@@ -936,7 +936,7 @@ a.btn,a.btn:hover,a.btn:focus{border:none!important;}
 .shanti-filters td{ white-space: nowrap;}
 .shanti-filters table td:nth-child(2){ width:100%;}
 .shanti-filters td .label{ color:#555;font-size: 0.88em;text-transform:uppercase;letter-spacing: -0.1rem;}
-.shanti-filters td .count{ font-size: 0.88em; padding-right:1rem;text-transform:capitalize;}
+.shanti-filters td .count{ font-size: 0.88em; margin-right:2rem;text-transform:capitalize;}
 .shanti-filters .view-filters-mb .views-exposed-widget{ position:relative;padding-right:3rem;}
 .shanti-filters .ajax-progress{ /*display: inline;*/ position:absolute;top:1.35rem;right:0;}
 .form-item-sort-bef-combine .btn{ width: 15rem;}
